@@ -45,6 +45,7 @@ public class ApplicationSecurityConfig extends WebSecurityConfigurerAdapter{
   @Override
   protected void configure(HttpSecurity http) throws Exception {
     http.authorizeRequests()
+        //.antMatchers("/register").hasAnyAuthority("ADMIN","CONTRIBUTOR")
         .antMatchers("/**","index","/css/*","/js/*").permitAll()
         .anyRequest().authenticated()
         .and()
