@@ -1,2 +1,3 @@
 < Tuesday 3/4/2021 - Able to add runners to DB from frontend
-Tuesday 3/4/2021 -
+Tuesday 3/4/2021 - gets the runners from RDBMS
+
